# project-archive

./: README.md
C#/MG-MSDF/: README.md  (+3 more)
C++/manta/: .gitignore  CMakeLists.txt  README.md  SOFTWARE.md
C++/manta/dependencies/SDL2/lib/x86/: SDL2test.lib
C++/manta/dependencies/imgui/backends/: imgui_impl_sdl.cpp
C++/manta/projects/common/: defines.hpp
C++/manta/projects/common/data/: ident.hpp
C++/manta/projects/common/data/meshes/: mbsm.cpp  mbsm.hpp  mmdl.cpp  mmdl.hpp  obj.cpp  obj.hpp
C++/manta/projects/engine/: CMakeLists.txt
C++/manta/projects/engine/base_content/shaders/: debug.glsl  lit.glsl  unlit.glsl
C++/manta/projects/engine/src/: main.cpp
C++/manta/projects/engine/src/assets/: material.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
C++/manta/projects/engine/src/data/: engine_context.cpp  engine_context.hpp
C++/manta/projects/engine/src/input/: axis.cpp  axis.hpp  input_server.cpp  input_server.hpp
C++/manta/projects/engine/src/math/: fmath.cpp  fmath.hpp
C++/manta/projects/engine/src/modularity/: dynlib.cpp  dynlib.hpp  gamemodule.hpp
C++/manta/projects/engine/src/rendering/: lighting.cpp  lighting.hpp  newrenderer.cpp  newrenderer.hpp  render_target.cpp  render_target.hpp  renderer.cpp  renderer.hpp  viewport.cpp  viewport.hpp
C++/manta/projects/engine/src/ui/: imguicontext.cpp  imguicontext.hpp
C++/manta/projects/engine/src/world/: actor.cpp  actor.hpp  behavior.cpp  behavior.hpp  timing.cpp  timing.hpp  transform.cpp  transform.hpp  world.cpp  world.hpp
C++/manta/projects/game/: CMakeLists.txt
C++/manta/projects/game/src/: main.cpp
C++/manta/projects/game/src/behaviors/: freecam.cpp  freecam.hpp
C++/manta/projects/game/src/game/: gamegamemodule.cpp  gamegamemodule.hpp
C++/manta/projects/packer/: CMakeLists.txt
C++/manta/projects/packer/src/: main.cpp  old_main.cpp
C++/manta/projects/packer/src/tools/: mmdl_maker.cpp  mmdl_maker.hpp
C++/sapphire/: .gitignore  .gitmodules  CMakeLists.txt  CREDIT.md  README.md
C++/sapphire/sapphire/core/: CMakeLists.txt
C++/sapphire/sapphire/core/config/: config_file.cpp  config_file.h
C++/sapphire/sapphire/core/data/: color.cpp  color.h  file.h  rect.h  size_tools.cpp  size_tools.h  string_tools.cpp  string_tools.h  timing.cpp  timing.h
C++/sapphire/sapphire/core/formats/models/: binary_mesh.cpp  binary_mesh.h
C++/sapphire/sapphire/core/fs/: pak_file_system.cpp  pak_file_system.h  virtual_file_system.cpp  virtual_file_system.h
C++/sapphire/sapphire/engine/: CMakeLists.txt  engine.cpp  engine.h  main.cpp  resources.rc
C++/sapphire/sapphire/engine/assets/: asset.h  asset_loader.cpp  asset_loader.h  material_asset.cpp  material_asset.h  mesh_asset.cpp  mesh_asset.h  static_mesh_asset.cpp  static_mesh_asset.h  texture_asset.cpp  texture_asset.h
C++/sapphire/sapphire/engine/assets/loaders/: material_loader.cpp  material_loader.h  obj_loader.cpp  obj_loader.h  texture_loader.cpp  texture_loader.h
C++/sapphire/sapphire/engine/console/: console.cpp  console.h  console_stream.cpp  console_stream.h
C++/sapphire/sapphire/engine/editor/: editor.cpp  editor.h
C++/sapphire/sapphire/engine/editor/data/: editor_config.cpp  editor_config.h  project.cpp  project.h
C++/sapphire/sapphire/engine/editor/panels/: actor_panel.cpp  actor_panel.h  assets_panel.cpp  assets_panel.h  console_panel.cpp  console_panel.h  panel.cpp  panel.h  renderer_panel.cpp  renderer_panel.h  world_panel.cpp  world_panel.h  world_view_panel.cpp  world_view_panel.h
C++/sapphire/sapphire/engine/math/: angle_math.cpp  angle_math.h
C++/sapphire/sapphire/engine/rendering/: material.cpp  material.h  render_server.cpp  render_server.h  render_target.cpp  render_target.h  render_target_data.cpp  render_target_data.h  shader.cpp  shader.h  texture.cpp  texture.h  texture_render_target.cpp  texture_render_target.h  window_render_target.cpp  window_render_target.h
C++/sapphire/sapphire/engine/rendering/buffers/: graphics_buffer.cpp  graphics_buffer.h  mesh_buffer.cpp  mesh_buffer.h  object_buffer.cpp  object_buffer.h  view_buffer.cpp  view_buffer.h
C++/sapphire/sapphire/engine/rendering/lighting/: forward_lighting.cpp  forward_lighting.h  light.cpp  light.h
C++/sapphire/sapphire/engine/rendering/objects/: draw_object.cpp  draw_object.h  mesh_draw_object.cpp  mesh_draw_object.h
C++/sapphire/sapphire/engine/scene/: actor.cpp  actor.h  mesh_actor.cpp  mesh_actor.h  transform.cpp  transform.h  universe.cpp  universe.h  world.cpp  world.h
C++/sapphire/sapphire/engine/typing/: class_registry.cpp  class_registry.h  hash_functions.h  reflect_macros.h
C++/sapphire/sapphire/rs_opengl4/: CMakeLists.txt
C++/sapphire/sapphire/rs_opengl4/glad/src/: glad.c
C++/sapphire/sapphire/rs_opengl4/preludes/: frag_prelude.glsl  vert_prelude.glsl
C++/sapphire/sapphire/rs_opengl4/rendering/: opengl4_graphics_buffer.cpp  opengl4_graphics_buffer.h  opengl4_material.cpp  opengl4_material.h  opengl4_mesh_buffer.cpp  opengl4_mesh_buffer.h  opengl4_render_server.cpp  opengl4_render_server.h  opengl4_render_target_data.cpp  opengl4_render_target_data.h  opengl4_shader.cpp  opengl4_shader.h  opengl4_texture.cpp  opengl4_texture.h
C++/sapphire/sapphire/rs_opengl4/shaders/: error.glsl
C++/sapphire/sapphire/rs_vulkan/: CMakeLists.txt
C++/sapphire/sapphire/rs_vulkan/VAL/: CMakeLists.txt  CREDIT.md
C++/sapphire/sapphire/rs_vulkan/preludes/: frag_prelude.glsl  vert_prelude.glsl
C++/sapphire/sapphire/rs_vulkan/rendering/: vulkan_graphics_buffer.cpp  vulkan_graphics_buffer.h  vulkan_material.cpp  vulkan_material.h  vulkan_mesh_buffer.cpp  vulkan_mesh_buffer.h  vulkan_render_server.cpp  vulkan_render_server.h  vulkan_render_target_data.cpp  vulkan_render_target_data.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_texture.cpp  vulkan_texture.h
C++/sapphire/sapphire/rs_vulkan/shaders/: depth_pass.glsl  error.glsl
C++/sapphire/scripts/: compile_vulkan_glsl.py  gen_resource_header.py  merge_spv_vert_frag.py
Rust/Manta-Rust/projects/manta/: Cargo.toml
Rust/Manta-Rust/projects/manta/src/: engine.rs  main.rs
(+215 files in other folders)
