[package]
name = "manta"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw3 = { path = "../../lib/glfw3" }
glad = { path = "../../lib/glad" }
manta_formats = { path = "../manta_formats" }
rsnumerics = { git = "https://github.com/zCubed3/rsnumerics" }
libc = "0.2"

# For serialization with our custom formats
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"

[target.'cfg(unix)'.build-dependencies]
pkg-config = "0.3.20"